--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -7,7 +6,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img width="350" height="200" src="italian flg.webp" alt=""></td>
+        <td><img width="350" height="200" src="Italian flg.webp" alt=""></td>
         <td><h1>This is HTML site</h1>
         <h2>And this is H2</h2>
         <i><p>I am teacher at university of <b><a href="www.google.com">california</a></b></p></i></td>
